--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -8,14 +8,14 @@
         </div>
 
         <div>
-            <label for="email1" class="block text-900 font-medium mb-2">Email</label>
-            <input id="email1" type="text" placeholder="Email address" [(ngModel)]="email" pInputText class="w-full mb-3">
+            <label for="email" class="block text-900 font-medium mb-2">Email</label>
+            <input id="email" type="text" placeholder="Email address" [(ngModel)]="email" pInputText class="w-full mb-3">
             @if(emailError) {
                 <div class="text-red-500">{{emailError}}</div>
             }
 
-            <label for="password1" class="block text-900 font-medium mb-2">Password</label>
-            <input id="password1" type="password" placeholder="Password" 
+            <label for="password" class="block text-900 font-medium mb-2">Password</label>
+            <input id="password" type="password" placeholder="Password" 
                 [(ngModel)]="password" 
                 pInputText 
                 class="w-full mb-3"
