--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -84,17 +84,9 @@
         </div>
         <div class="col-12 md:col-6 lg:col-4">
             <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between mb-3">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Revenue</span>
-                        <div class="text-900 font-medium text-xl">$2.100</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-orange-100 border-round" style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-map-marker text-orange-500 text-xl"></i>
-                    </div>
+                <div class="card flex justify-content-center">
+                    <p-chart type="pie" [data]="data" [options]="options" />
                 </div>
-                <span class="text-green-500 font-medium">%52+ </span>
-                <span class="text-500">since last week</span>
             </div>
         </div>   
     </div>
@@ -103,17 +95,9 @@
     <div class="grid">
         <div class="col-12 md:col-6 lg:col-4">
             <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between mb-3">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Orders</span>
-                        <div class="text-900 font-medium text-xl">152</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-blue-100 border-round" style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
-                    </div>
+                <div class="card flex justify-content-center">
+                    <p-chart type="doughnut" [data]="data" [options]="options" />
                 </div>
-                <span class="text-green-500 font-medium">24 new </span>
-                <span class="text-500">since last visit</span>
             </div>
         </div>
         <div class="col-12 md:col-6 lg:col-8">
@@ -137,18 +121,12 @@
     <div class="grid">
         <div class="col-12 md:col-6 lg:col-12">
             <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between mb-3">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Orders</span>
-                        <div class="text-900 font-medium text-xl">152</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-blue-100 border-round" style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
-                    </div>
-                </div>
-                <span class="text-green-500 font-medium">24 new </span>
-                <span class="text-500">since last visit</span>
+                <div class="h-20rem md:h-30rem lg:h-40rem"
+                 leaflet
+                 (leafletMapReady)="onMapReady($event)"
+                 [leafletOptions]="lealfetOptions">
             </div>
-        </div>  
+            </div>
+        </div>
     </div>
 </div>
