--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -4,7 +4,7 @@
            
         </ng-template>
         <ng-template pTemplate="item" let-item let-root="root">
-            <a [routerLink]="item.key" pRipple class="flex align-items-center p-menuitem-link">
+            <a pRipple class="flex align-items-center p-menuitem-link">
                 <span [class]="item.icon"></span>
                 <span class="ml-2">{{ item.label }}</span>
                 @if(item.items) {
