--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,4 @@
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
+@import 'leaflet/dist/leaflet.css';
