--- a/src/app/pages/main/management/device/device-list/device-list.component.html
+++ b/src/app/pages/main/management/device/device-list/device-list.component.html
@@ -1,9 +1,8 @@
 <div class="px-4 py-5 md:px-6 lg:px-8">
     <p-toolbar styleClass="mb-4 gap-2">
         <ng-template pTemplate="left">
-            <p-button severity="success" label="New" icon="pi pi-plus" class="mr-2" (onClick)="openNew()" />
             <p-button severity="danger" label="Delete" icon="pi pi-trash" (onClick)="deleteSelectedProducts()"
-                [disabled]="!selectedDealers || !selectedDealers.length" />
+                [disabled]="!selectedDevices || !selectedDevices.length" />
         </ng-template>
 
         <ng-template pTemplate="right">
@@ -13,15 +12,15 @@
         </ng-template>
     </p-toolbar>
 
-    <app-generic-table [data]="dealers" [columns]="columns" [rows]="10" [header]="'Device Details'"
-        [globalFilterFields]="['dealer','name']" (edit)="onEditProduct($event)"
+    <app-generic-table [data]="devices" [columns]="columns" [rows]="10" [header]="'Device Details'"
+        [globalFilterFields]="['imei']" (edit)="onEditProduct($event)"
         (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)"></app-generic-table>
 
 </div>
 
 
 <app-generic-dialog [visible]="dealerDialog" [header]="'Device Details'" [width]="'450px'" [modal]="true"
-    [styleClass]="'p-fluid'" [fields]="fields" [data]="dealer" (onHide)="onHideDialog($event)"
+    [styleClass]="'p-fluid'" [fields]="fields" [data]="device" (onHide)="onHideDialog($event)"
     (onSave)="onSaveProduct($event)" />
 
 
