--- a/src/app/shared/components/generic-dialog/generic-dialog.component.html
+++ b/src/app/shared/components/generic-dialog/generic-dialog.component.html
@@ -29,11 +29,13 @@
                         @case ('radiobutton') {
                             <ng-container>
                                 <div class="formgrid grid">
-                                    <div class="field-radiobutton col-6" *ngFor="let option of field.options">
-                                        <p-radioButton id="{{ option.value }}" name="{{ field.name }}"
-                                            value="{{ option.value }}" [(ngModel)]="data[field.name]" />
-                                        <label for="{{ option.value }}">{{ option.label }}</label>
-                                    </div>
+                                    @for (option of field.options; track $index) {
+                                        <div class="field-radiobutton col-6">
+                                            <p-radioButton id="{{ option.value }}" name="{{ field.name }}"
+                                                value="{{ option.value }}" [(ngModel)]="data[field.name]" />
+                                            <label for="{{ option.value }}">{{ option.label }}</label>
+                                        </div>
+                                    }
                                 </div>
                             </ng-container>
                         }
