--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -65,7 +65,7 @@
                             <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-2" shape="circle" />
                             <span class="inline-flex flex-column">
                                 <span class="font-bold">{{ userName }}</span>
-                                <span class="text-sm">{{ userType }}</span>
+                                <span class="text-sm">{{ userRole }}</span>
                             </span>
                         </button>
                     </ng-template>
