--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 
-<p-toast position="bottom-right" [life]="2000" [breakpoints]="{ '920px': { width: '100%', right: '0', left: '0' } }"/>
+<p-toast [life]="2000" [breakpoints]="{ '920px': { width: '100%', right: '0', left: '0' } }"/>
 
 <router-outlet></router-outlet>
