--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -7,7 +7,8 @@
                         <span class="block text-500 font-medium mb-3">Orders</span>
                         <div class="text-900 font-medium text-xl">152</div>
                     </div>
-                    <div class="flex align-items-center justify-content-center bg-blue-100 border-round" style="width:2.5rem;height:2.5rem">
+                    <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
+                        style="width:2.5rem;height:2.5rem">
                         <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
                     </div>
                 </div>
@@ -22,7 +23,8 @@
                         <span class="block text-500 font-medium mb-3">Revenue</span>
                         <div class="text-900 font-medium text-xl">$2.100</div>
                     </div>
-                    <div class="flex align-items-center justify-content-center bg-orange-100 border-round" style="width:2.5rem;height:2.5rem">
+                    <div class="flex align-items-center justify-content-center bg-orange-100 border-round"
+                        style="width:2.5rem;height:2.5rem">
                         <i class="pi pi-map-marker text-orange-500 text-xl"></i>
                     </div>
                 </div>
@@ -37,11 +39,12 @@
                         <span class="block text-500 font-medium mb-3">Customers</span>
                         <div class="text-900 font-medium text-xl">28441</div>
                     </div>
-                    <div class="flex align-items-center justify-content-center bg-cyan-100 border-round" style="width:2.5rem;height:2.5rem">
+                    <div class="flex align-items-center justify-content-center bg-cyan-100 border-round"
+                        style="width:2.5rem;height:2.5rem">
                         <i class="pi pi-inbox text-cyan-500 text-xl"></i>
                     </div>
                 </div>
-                <span class="text-green-500 font-medium">520  </span>
+                <span class="text-green-500 font-medium">520 </span>
                 <span class="text-500">newly registered</span>
             </div>
         </div>
@@ -52,7 +55,8 @@
                         <span class="block text-500 font-medium mb-3">Comments</span>
                         <div class="text-900 font-medium text-xl">152 Unread</div>
                     </div>
-                    <div class="flex align-items-center justify-content-center bg-purple-100 border-round" style="width:2.5rem;height:2.5rem">
+                    <div class="flex align-items-center justify-content-center bg-purple-100 border-round"
+                        style="width:2.5rem;height:2.5rem">
                         <i class="pi pi-comment text-purple-500 text-xl"></i>
                     </div>
                 </div>
@@ -70,62 +74,37 @@
         <div class="col-12 md:col-6 lg:col-8">
             <div class="surface-card shadow-2 p-3 border-round">
                 <div class="flex justify-content-between mb-3">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Orders</span>
-                        <div class="text-900 font-medium text-xl">152</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-blue-100 border-round" style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
-                    </div>
+                    <p-chart responsive="true" class="w-full" height="348px" type="bar" [data]="bardata"
+                        [options]="baroptions" />
                 </div>
-                <span class="text-green-500 font-medium">24 new </span>
-                <span class="text-500">since last visit</span>
             </div>
         </div>
         <div class="col-12 md:col-6 lg:col-4">
             <div class="surface-card shadow-2 p-3 border-round">
-                <div class="card flex justify-content-center">
-                    <p-chart type="pie" [data]="data" [options]="options" />
-                </div>
-            </div>
-        </div>   
-    </div>
+                <div class="flex flex-column justify-content-between">
+                    <div class="flex justify-content-between mb-3">
+                        <div>
+                            <span class="block text-500 font-medium mb-3">Revenue</span>
+                            <div class="text-900 font-medium text-xl">$2.100</div>
+                        </div>
 
-
-    <div class="grid">
-        <div class="col-12 md:col-6 lg:col-4">
-            <div class="surface-card shadow-2 p-3 border-round">
-                <div class="card flex justify-content-center">
-                    <p-chart type="doughnut" [data]="data" [options]="options" />
+                        <div class="flex align-items-center justify-content-center bg-orange-100 border-round md:p-4 lg:p-4">
+                            <p-chart responsive="true" height="300px" width="200px" type="pie" [data]="data"
+                                [options]="options" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-12 md:col-6 lg:col-8">
-            <div class="surface-card shadow-2 p-3 border-round">
-                <div class="flex justify-content-between mb-3">
-                    <div>
-                        <span class="block text-500 font-medium mb-3">Revenue</span>
-                        <div class="text-900 font-medium text-xl">$2.100</div>
-                    </div>
-                    <div class="flex align-items-center justify-content-center bg-orange-100 border-round" style="width:2.5rem;height:2.5rem">
-                        <i class="pi pi-map-marker text-orange-500 text-xl"></i>
-                    </div>
-                </div>
-                <span class="text-green-500 font-medium">%52+ </span>
-                <span class="text-500">since last week</span>
-            </div>
-        </div>   
     </div>
 
 
     <div class="grid">
         <div class="col-12 md:col-6 lg:col-12">
             <div class="surface-card shadow-2 p-3 border-round">
-                <div class="h-20rem md:h-30rem lg:h-40rem"
-                 leaflet
-                 (leafletMapReady)="onMapReady($event)"
-                 [leafletOptions]="lealfetOptions">
-            </div>
+                <div class="h-20rem md:h-30rem lg:h-40rem" leaflet (leafletMapReady)="onMapReady($event)"
+                    [leafletOptions]="lealfetOptions">
+                </div>
             </div>
         </div>
     </div>
