--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -66,7 +66,7 @@
                 <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
             </div>
 
-            <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full" (click)="validateForm()"></button>
+            <button [loading]="isLoggedIn" pButton pRipple label="Sign In" icon="pi pi-user" class="w-full" (click)="validateForm()"></button>
         </div>
     </div>
 </div>
