--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="flex align-items-center justify-content-center min-h-screen">
-    <div class="surface-card p-4 shadow-2 border-round w-full lg:w-4">
+<div class="flex align-items-center justify-content-center">
+    <div class="surface-card p-4 shadow-2 border-round w-full lg:w-3">
         <div class="text-center mb-5">
             <!-- <img src="assets/images/blocks/logos/hyper.svg" alt="Image" height="50" class="mb-3"> -->
-            <span class="inline-flex align-items-center gap-1 px-2 py-2 mb-5">
+            <span class="inline-flex align-items-center gap-1 px-2 py-2">
                 <svg width="33" height="35" viewBox="0 0 33 35" fill="none" xmlns="http://www.w3.org/2000/svg" class="block mx-auto">
                     <path d="M15.1934 0V0V0L0.0391235 5.38288L2.35052 25.3417L15.1934 32.427V32.427V32.427L28.0364 25.3417L30.3478 5.38288L15.1934 0Z" fill="var(--primary-color)" />
                     <mask id="mask0_1_36" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="31" height="33">
@@ -34,7 +34,6 @@
                 </svg>
                 <span class="font-medium text-xl font-semibold">PRIME<span class="text-primary">APP</span></span>
             </span>
-            <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
             <!-- <span class="text-600 font-medium line-height-3">Don't have an account?</span>
             <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a> -->
         </div>
@@ -59,14 +58,46 @@
                     <div class="text-red-500">{{passwordError}}</div>
                 }
 
-            <div class="flex align-items-center justify-content-between mb-6">
+            <div class="flex align-items-center justify-content-between mb-3">
                 <div class="flex align-items-center">
                     <!-- <label for="rememberme1" class="text-900">Remember me</label> -->
                 </div>
                 <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
             </div>
 
-            <button [loading]="isLoggedIn" pButton pRipple label="Sign In" icon="pi pi-user" class="w-full" (click)="validateForm()"></button>
+
+            <div class="flex justify-content-center mb-3">
+                <div class="col-12 md:col-6 lg:col-12">
+                  <div class="card p-3">
+                    <h2 class="text-center">Complete reCAPTCHA</h2>
+              
+                    <div class="flex justify-content-center">
+                      <div class="col-12">
+                        <div class="flex align-items-center p-3 bg-yellow-100 border-round text-yellow-800">
+                          <i class="pi pi-lock mr-2"></i>
+                          <span>{{ captchaCode }}</span>
+                        </div>
+                      </div>
+                    </div>
+              
+                    <!-- Input and Verify Button in the same row -->
+                    <div class="flex justify-content-between align-items-center mt-3">
+                      <div class="flex-grow-1 mr-2">
+                        <input (copy)="disableEvent($event)" 
+                        (paste)="disableEvent($event)" 
+                        (cut)="disableEvent($event)" type="text" pInputText [(ngModel)]="userInput" class="w-full" />
+                      </div>
+                      <div>
+                        <p-button [disabled]="!userInput.length" [loading]="isVerifiedLoader" label="Verify" (onClick)="verifyCode()"></p-button>
+                      </div>
+                    </div>
+              
+                  </div>
+                </div>
+              </div>
+              
+
+            <button [disabled]="!isVerified" [loading]="isLoggedIn" pButton pRipple label="Sign In" icon="pi pi-user" class="w-full" (click)="validateForm()"></button>
         </div>
     </div>
 </div>
