--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -71,27 +71,20 @@
 
 
     <div class="grid">
-        <div class="col-12 md:col-6 lg:col-8">
+        <div class="col-12 md:col-6 lg:col-9">
             <div class="surface-card shadow-2 p-3 border-round">
                 <div class="flex justify-content-between mb-3">
-                    <p-chart responsive="true" class="w-full" height="348px" type="bar" [data]="bardata"
+                    <p-chart [responsive]="true" class="w-full" height="400px" type="line" [data]="bardata"
                         [options]="baroptions" />
                 </div>
             </div>
         </div>
-        <div class="col-12 md:col-6 lg:col-4">
+        <div class="col-12 md:col-6 lg:col-3">
             <div class="surface-card shadow-2 p-3 border-round">
                 <div class="flex flex-column justify-content-between">
                     <div class="flex justify-content-between mb-3">
-                        <div>
-                            <span class="block text-500 font-medium mb-3">Revenue</span>
-                            <div class="text-900 font-medium text-xl">$2.100</div>
-                        </div>
-
-                        <div class="flex align-items-center justify-content-center bg-orange-100 border-round md:p-4 lg:p-4">
-                            <p-chart responsive="true" height="300px" width="200px" type="pie" [data]="data"
-                                [options]="options" />
-                        </div>
+                            <p-chart [responsive]="true" class="w-full" height="400px" type="doughnut" [data]="data"
+                            [options]="options" />
                     </div>
                 </div>
             </div>
