--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -1,36 +1,47 @@
 <div class="flex align-items-center justify-content-center">
-    <div class="surface-card p-4 shadow-2 border-round w-full lg:w-3">
+    <div class="surface-card p-4 shadow-2 border-round w-full md:w-8 lg:w-4 xl:w-3">
         <div class="text-center mb-5">
-            <!-- <img src="assets/images/blocks/logos/hyper.svg" alt="Image" height="50" class="mb-3"> -->
             <span class="inline-flex align-items-center gap-1 px-2 py-2">
-                <svg width="33" height="35" viewBox="0 0 33 35" fill="none" xmlns="http://www.w3.org/2000/svg" class="block mx-auto">
-                    <path d="M15.1934 0V0V0L0.0391235 5.38288L2.35052 25.3417L15.1934 32.427V32.427V32.427L28.0364 25.3417L30.3478 5.38288L15.1934 0Z" fill="var(--primary-color)" />
-                    <mask id="mask0_1_36" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="31" height="33">
-                        <path d="M15.1934 0V0V0L0.0391235 5.38288L2.35052 25.3417L15.1934 32.427V32.427V32.427L28.0364 25.3417L30.3478 5.38288L15.1934 0Z" fill="var(--primary-color-text)" />
+                <svg width="33" height="35" viewBox="0 0 33 35" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    class="block mx-auto">
+                    <path
+                        d="M15.1934 0V0V0L0.0391235 5.38288L2.35052 25.3417L15.1934 32.427V32.427V32.427L28.0364 25.3417L30.3478 5.38288L15.1934 0Z"
+                        fill="var(--primary-color)" />
+                    <mask id="mask0_1_36" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="0" width="31"
+                        height="33">
+                        <path
+                            d="M15.1934 0V0V0L0.0391235 5.38288L2.35052 25.3417L15.1934 32.427V32.427V32.427L28.0364 25.3417L30.3478 5.38288L15.1934 0Z"
+                            fill="var(--primary-color-text)" />
                     </mask>
                     <g mask="url(#mask0_1_36)">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M15.1935 0V3.5994V3.58318V20.0075V20.0075V32.427V32.427L28.0364 25.3417L30.3478 5.38288L15.1935 0Z" fill="var(--primary-color)" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M15.1935 0V3.5994V3.58318V20.0075V20.0075V32.427V32.427L28.0364 25.3417L30.3478 5.38288L15.1935 0Z"
+                            fill="var(--primary-color)" />
                     </g>
-                    <path d="M19.6399 15.3776L18.1861 15.0547L19.3169 16.6695V21.6755L23.1938 18.4458V12.9554L21.4169 13.6013L19.6399 15.3776Z" fill="var(--primary-color-text)" />
-                    <path d="M10.5936 15.3776L12.0474 15.0547L10.9166 16.6695V21.6755L7.03966 18.4458V12.9554L8.81661 13.6013L10.5936 15.3776Z" fill="var(--primary-color-text)" />
                     <path
-                        fill-rule="evenodd"
-                        clip-rule="evenodd"
+                        d="M19.6399 15.3776L18.1861 15.0547L19.3169 16.6695V21.6755L23.1938 18.4458V12.9554L21.4169 13.6013L19.6399 15.3776Z"
+                        fill="var(--primary-color-text)" />
+                    <path
+                        d="M10.5936 15.3776L12.0474 15.0547L10.9166 16.6695V21.6755L7.03966 18.4458V12.9554L8.81661 13.6013L10.5936 15.3776Z"
+                        fill="var(--primary-color-text)" />
+                    <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M11.3853 16.9726L12.6739 15.0309L13.4793 15.5163H16.7008L17.5061 15.0309L18.7947 16.9726V24.254L17.8283 25.7103L16.7008 26.843H13.4793L12.3518 25.7103L11.3853 24.254V16.9726Z"
-                        fill="var(--primary-color-text)"
-                    />
-                    <path d="M19.3168 24.7437L21.4168 22.6444V20.5451L19.3168 22.3214V24.7437Z" fill="var(--primary-color-text)" />
-                    <path d="M10.9166 24.7437L8.81662 22.6444V20.5451L10.9166 22.3214V24.7437Z" fill="var(--primary-color-text)" />
-                    <path
-                        fill-rule="evenodd"
-                        clip-rule="evenodd"
+                        fill="var(--primary-color-text)" />
+                    <path d="M19.3168 24.7437L21.4168 22.6444V20.5451L19.3168 22.3214V24.7437Z"
+                        fill="var(--primary-color-text)" />
+                    <path d="M10.9166 24.7437L8.81662 22.6444V20.5451L10.9166 22.3214V24.7437Z"
+                        fill="var(--primary-color-text)" />
+                    <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M13.0167 5.68861L11.7244 8.7568L13.8244 14.8932H14.7936V5.68861H13.0167ZM15.4397 5.68861V14.8932H16.5706L18.5091 8.7568L17.2167 5.68861H15.4397Z"
-                        fill="var(--primary-color-text)"
-                    />
-                    <path d="M13.8244 14.8932L6.87813 12.3094L5.90888 8.27235L11.8859 8.7568L13.9859 14.8932H13.8244Z" fill="var(--primary-color-text)" />
-                    <path d="M16.5706 14.8932L23.5169 12.3094L24.4861 8.27235L18.3476 8.7568L16.4091 14.8932H16.5706Z" fill="var(--primary-color-text)" />
-                    <path d="M18.8321 8.27235L22.2245 7.94938L19.9629 5.68861H17.7013L18.8321 8.27235Z" fill="var(--primary-color-text)" />
-                    <path d="M11.4013 8.27235L8.00893 7.94938L10.2705 5.68861H12.5321L11.4013 8.27235Z" fill="var(--primary-color-text)" />
+                        fill="var(--primary-color-text)" />
+                    <path d="M13.8244 14.8932L6.87813 12.3094L5.90888 8.27235L11.8859 8.7568L13.9859 14.8932H13.8244Z"
+                        fill="var(--primary-color-text)" />
+                    <path d="M16.5706 14.8932L23.5169 12.3094L24.4861 8.27235L18.3476 8.7568L16.4091 14.8932H16.5706Z"
+                        fill="var(--primary-color-text)" />
+                    <path d="M18.8321 8.27235L22.2245 7.94938L19.9629 5.68861H17.7013L18.8321 8.27235Z"
+                        fill="var(--primary-color-text)" />
+                    <path d="M11.4013 8.27235L8.00893 7.94938L10.2705 5.68861H12.5321L11.4013 8.27235Z"
+                        fill="var(--primary-color-text)" />
                 </svg>
                 <span class="font-medium text-xl font-semibold">PRIME<span class="text-primary">APP</span></span>
             </span>
@@ -40,23 +51,26 @@
 
         <div>
             <label for="email" class="block text-900 font-medium mb-2">Email</label>
-            <input id="email" type="text" placeholder="Email address" [(ngModel)]="email" pInputText class="w-full mb-3">
+            <p-iconField iconPosition="left">
+                <p-inputIcon styleClass="pi pi-user" />
+                <input id="email" class="w-full mb-3" type="text" placeholder="Email address" [(ngModel)]="email"
+                    pInputText />
+            </p-iconField>
             @if(emailError) {
-                <div class="text-red-500">{{emailError}}</div>
+            <div class="text-red-500 mb-3">{{emailError}}</div>
             }
 
             <label for="password" class="block text-900 font-medium mb-2">Password</label>
-            <input id="password" type="password" placeholder="Password" 
-                [(ngModel)]="password" 
-                pInputText 
-                class="w-full mb-3"
-                (copy)="disableEvent($event)" 
-                (paste)="disableEvent($event)" 
-                (cut)="disableEvent($event)">
+            <p-iconField iconPosition="right">
+                <p-inputIcon styleClass="pi pi-eye cursor-pointer" />
+                <input id="password" type="password" placeholder="Password" [(ngModel)]="password" pInputText
+                    class="w-full mb-3" (copy)="disableEvent($event)" (paste)="disableEvent($event)"
+                    (cut)="disableEvent($event)">
+            </p-iconField>
 
-                @if(passwordError) {
-                    <div class="text-red-500">{{passwordError}}</div>
-                }
+            @if(passwordError) {
+            <div class="text-red-500 mb-3">{{passwordError}}</div>
+            }
 
             <div class="flex align-items-center justify-content-between mb-3">
                 <div class="flex align-items-center">
@@ -65,39 +79,31 @@
                 <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
             </div>
 
-
-            <div class="flex justify-content-center mb-3">
-                <div class="col-12 md:col-6 lg:col-12">
-                  <div class="card p-3">
-                    <h2 class="text-center">Complete reCAPTCHA</h2>
-              
-                    <div class="flex justify-content-center">
-                      <div class="col-12">
-                        <div class="flex align-items-center p-3 bg-yellow-100 border-round text-yellow-800">
-                          <i class="pi pi-lock mr-2"></i>
-                          <span>{{ captchaCode }}</span>
-                        </div>
-                      </div>
+            <p-divider align="center" type="dotted">
+                <b>Enter CAPTCHA</b>
+            </p-divider>
+            <label for="reCAPTCHA" class="block text-900 font-medium mb-2"></label>
+            <div class="grid">
+                <div class="col-6">
+                    <div
+                        class="flex justify-content-between align-items-center p-3 bg-yellow-100 border-round text-yellow-800">
+                        <span>{{ captchaCode }}</span>
+                        <i (click)="generateCatcha()" class="pi pi-refresh cursor-pointer"></i>
                     </div>
-              
-                    <!-- Input and Verify Button in the same row -->
-                    <div class="flex justify-content-between align-items-center mt-3">
-                      <div class="flex-grow-1 mr-2">
-                        <input (copy)="disableEvent($event)" 
-                        (paste)="disableEvent($event)" 
-                        (cut)="disableEvent($event)" type="text" pInputText [(ngModel)]="userInput" class="w-full" />
-                      </div>
-                      <div>
-                        <p-button [disabled]="!userInput.length" [loading]="isVerifiedLoader" label="Verify" (onClick)="verifyCode()"></p-button>
-                      </div>
-                    </div>
-              
-                  </div>
                 </div>
-              </div>
-              
+                <div class="col-6">
+                    <input id="reCAPTCHA" type="text" placeholder="reCAPTCHA" [(ngModel)]="userInput" pInputText
+                        class="w-full mb-3" [ngClass]="{'ng-invalid ng-dirty p-shake': captchaError}">
+                </div>
+            </div>
 
-            <button [disabled]="!isVerified" [loading]="isLoggedIn" pButton pRipple label="Sign In" icon="pi pi-user" class="w-full" (click)="validateForm()"></button>
+
+            @if(emailError) {
+            <div class="text-red-500">{{emailError}}</div>
+            }
+
+            <button [disabled]="!userInput.length" [loading]="isLoggedIn" pButton pRipple label="Sign In"
+                icon="pi pi-sign-in" iconPos="right" class="w-full" (click)="validateForm()"></button>
         </div>
     </div>
 </div>
