--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,30 @@
 @import "primeflex/primeflex.css";
 @import 'leaflet/dist/leaflet.css';
 
-
+.p-shake {
+    animation: p-shake 0.5s;
+  }
+  
+  @keyframes p-shake {
+    0% {
+      transform: translateX(0);
+    }
+    20% {
+      transform: translateX(-10px);
+    }
+    40% {
+      transform: translateX(10px);
+    }
+    60% {
+      transform: translateX(-10px);
+    }
+    80% {
+      transform: translateX(10px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
 
 /* Custom Scrollbar Styles */
 
