--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -79,6 +79,7 @@
 
     <div class="px-4 py-4 md:px-6 lg:px-8">
         <p-breadcrumb 
+        styleClass="border-none"
             class="max-w-full" 
             [model]="breadCrumbs" 
             [home]="home" />
