--- a/src/app/pages/main/management/device/assigned-dealer/assigned-dealer.component.html
+++ b/src/app/pages/main/management/device/assigned-dealer/assigned-dealer.component.html
@@ -1,4 +1,4 @@
-<div class="px-4 py-5 md:px-6 lg:px-8">
+<div class="px-4 md:px-6 lg:px-8">
     <p-toolbar styleClass="mb-4 gap-2 p-5">
         <ng-template pTemplate="left">
             <p-floatLabel>
