--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -53,7 +53,7 @@
             <label for="email" class="block text-900 font-medium mb-2">Email</label>
             <p-iconField iconPosition="left">
                 <p-inputIcon styleClass="pi pi-user" />
-                <input id="email" class="w-full mb-3" type="text" placeholder="Email address" [(ngModel)]="email"
+                <input required id="email" class="w-full mb-3" type="text" placeholder="Email address" [(ngModel)]="email"
                     pInputText />
             </p-iconField>
             @if(emailError) {
@@ -63,7 +63,7 @@
             <label for="password" class="block text-900 font-medium mb-2">Password</label>
             <p-iconField iconPosition="right">
                 <p-inputIcon styleClass="pi pi-eye cursor-pointer" />
-                <input id="password" type="password" placeholder="Password" [(ngModel)]="password" pInputText
+                <input required id="password" type="password" placeholder="Password" [(ngModel)]="password" pInputText
                     class="w-full mb-3" (copy)="disableEvent($event)" (paste)="disableEvent($event)"
                     (cut)="disableEvent($event)">
             </p-iconField>
@@ -96,11 +96,6 @@
                         class="w-full mb-3" [ngClass]="{'ng-invalid ng-dirty p-shake': captchaError}">
                 </div>
             </div>
-
-
-            @if(emailError) {
-            <div class="text-red-500">{{emailError}}</div>
-            }
 
             <button [disabled]="!userInput.length" [loading]="isLoggedIn" pButton pRipple label="Sign In"
                 icon="pi pi-sign-in" iconPos="right" class="w-full" (click)="validateForm()"></button>
