--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -62,8 +62,8 @@
 
             <label for="password" class="block text-900 font-medium mb-2">Password</label>
             <p-iconField iconPosition="right">
-                <p-inputIcon styleClass="pi pi-eye cursor-pointer" />
-                <input required id="password" type="password" placeholder="Password" [(ngModel)]="password" pInputText
+                <p-inputIcon (click)="togglePassword()" styleClass="pi pi-eye cursor-pointer" />
+                <input required [type]="isPasswordToggled ? 'text' : 'password'" placeholder="Password" [(ngModel)]="password" pInputText
                     class="w-full mb-3" (copy)="disableEvent($event)" (paste)="disableEvent($event)"
                     (cut)="disableEvent($event)">
             </p-iconField>
