--- a/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
+++ b/src/app/pages/main/management/dynamic-user/dynamic-user.component.html
@@ -3,25 +3,23 @@
         <ng-template pTemplate="left">
             <p-button severity="success" label="New" icon="pi pi-plus" class="mr-2" (onClick)="openNew()" />
             <p-button severity="danger" label="Delete" icon="pi pi-trash" (onClick)="deleteSelectedProducts()"
-                [disabled]="!selectedDealers || !selectedDealers.length" />
+                [disabled]="!selectedUsers || !selectedUsers.length" />
         </ng-template>
 
         <ng-template pTemplate="right">
-            <p-fileUpload mode="basic" accept="image/*" [maxFileSize]="1000000" label="Import" chooseLabel="Import"
-                class="mr-2 inline-block" />
+            <!-- <p-fileUpload mode="basic" accept="image/*" [maxFileSize]="1000000" label="Import" chooseLabel="Import"
+                class="mr-2 inline-block" /> -->
             <p-button severity="help" label="Export" icon="pi pi-upload" />
         </ng-template>
     </p-toolbar>
 
-    <app-generic-table [data]="dealers" [columns]="columns" [rows]="10" [header]="userType"
-        [globalFilterFields]="['dealer','name']" (edit)="onEditProduct($event)"
-        (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)"></app-generic-table>
+    <app-generic-table [data]="users" [columns]="columns" [rows]="10" [header]="userType"
+        [globalFilterFields]="['orgName','name','email','loginId']" (edit)="onEditProduct($event)"
+        (delete)="onDeleteProduct($event)" (selectionChange)="onSelectionChange($event)">
+    </app-generic-table>
 </div>
 
 
-<app-generic-dialog [visible]="dealerDialog" [header]="userType" [width]="'500px'" [modal]="true"
-    [styleClass]="'p-fluid'" [fields]="fields" [data]="dealer" (onHide)="onHideDialog($event)"
+<app-generic-dialog [visible]="userDialog" [header]="userType" [width]="'800px'" [modal]="true" [isEditing]="isEditing"
+   [hideFields]="hideFields" [styleClass]="'p-fluid'" [fields]="fields" [data]="user" (onHide)="onHideDialog($event)"
     (onSave)="onSaveProduct($event)" />
-
-
-<p-confirmDialog [style]="{ width: '450px' }" />
