--- a/src/app/shared/components/generic-dialog/generic-dialog.component.html
+++ b/src/app/shared/components/generic-dialog/generic-dialog.component.html
@@ -4,11 +4,17 @@
             @for (field of fields; track $index) {
                 @if(!field.hide(this.hideFields)) {
             <div class="field col-12 sm:col-12 md:col-4">
-                <label for="{{ field.name }}">{{ field.label }}</label>
+                <div class="flex align-items-center mb-2">
+                    <label for="{{ field.name }}" class="mr-2">{{ field.label }}</label>
+                    @if(field.validation) {
+                        <i *ngIf="!validationState[field.name]" class="pi pi-exclamation-circle text-red-500"></i>
+                        <i *ngIf="validationState[field.name]" class="pi pi-check-circle text-green-500"></i>
+                    }
+                </div>
                 @switch (field.type) {
                     @case ('text') {
                         <ng-container>
-                            <input type="text" pInputText id="{{ field.name }}" [(ngModel)]="data[field.name]" required />
+                                <input (keyup)="onInputChange($event, field.name)" type="text" pInputText id="{{ field.name }}" [(ngModel)]="data[field.name]" [required]="true" />
                         </ng-container>
                     }
                     @case ('textarea') {
@@ -61,7 +67,7 @@
 
     <ng-template pTemplate="footer">
         <p-button label="Cancel" icon="pi pi-times" [text]="true" (onClick)="hideDialog()" />
-        <p-button label="Save" icon="pi pi-check" [text]="true" (onClick)="save()" />
+        <p-button [disabled]="!isValidated" label="Save" icon="pi pi-check" [text]="true" (onClick)="save()" />
     </ng-template>
 </p-dialog>
 
